--- a/.github/workflows/dev_cd.yml
+++ b/.github/workflows/dev_cd.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           registry: ghcr.io
           username: IngSis-Grupo1-2024
-          password: ${{ secrets.TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push to GitHub Packages
         id: docker_build
