--- a/.github/workflows/dev_cd.yml
+++ b/.github/workflows/dev_cd.yml
@@ -8,6 +8,7 @@ jobs:
     name: Push Docker image to GitHub Packages
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4.1.2
       - name: Create Short SHA
         uses: benjlevesque/short-sha@v1.2
         id: short-sha
