--- a/.github/workflows/dev_cd.yml
+++ b/.github/workflows/dev_cd.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/snippet-permission/echo:${{ steps.short-sha.outputs.sha }}
+            ghcr.io/snippet-permission
