--- a/.github/workflows/dev_cd.yml
+++ b/.github/workflows/dev_cd.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.2
       - uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        id: meta
         with:
           images: ghcr.io/snippet-permission
       - uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
