--- a/.github/workflows/dev_cd.yml
+++ b/.github/workflows/dev_cd.yml
@@ -13,6 +13,11 @@ jobs:
         id: meta
         with:
           images: ghcr.io/snippet-permission
+          tags: latest
+          labels: |
+              org.opencontainers.image.title=snippet-permission
+              org.opencontainers.image.description=Snippet Permission Service
+              org.opencontainers.image.url=https://github.com/IngSis-Grupo1-2024/snippet-permission.git
       - uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
