--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=SnippetPermission
+spring.application.name=snippet-permission
+spring.datasource.url=jdbc:postgresql://localhost:5435/db-permissions
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
