--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-.env
-
 ### STS ###
 .apt_generated
 .classpath
@@ -40,3 +38,6 @@ out/
 
 ### Kotlin ###
 .kotlin
+
+### .env ###
+.env
