--- a/.github/workflows/dev_cd.yml
+++ b/.github/workflows/dev_cd.yml
@@ -1,8 +1,8 @@
-name: "Continuous Deployment"
+name: "Continuous Deployment to dev"
 on:
   push:
     branches:
-      - main
+      - dev
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
