--- a/newrelic/newrelic.yml
+++ b/newrelic/newrelic.yml
@@ -97,6 +97,9 @@ common: &default_settings
     # a format that includes agent metadata for linking them to traces and errors.
     forwarding:
 
+      context_data:
+        enabled: true
+
       # When true, application logs will be forwarded to New Relic. The default is true.
       enabled: true
 
