--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: snippet-permission
   datasource:
-    url: jdbc:postgresql://localhost:5435/db-permissions
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5435}/${DB_NAME:db-permissions}
     username: sa
     password: password
   jpa:
