add deploy to vm in main_cd.yml

--- a/.github/workflows/main_cd.yml
+++ b/.github/workflows/main_cd.yml
@@ -9,3 +9,9 @@ jobs:
     with:
       image-name: snippet-permission
       env-name: main
+  deploy_to_vm:
+    uses: IngSis-Grupo1-2024/snippet-infra/.github/workflows/deploy-prod.yml@main
+    needs: push_to_registry
+    secrets: inherit
+    with:
+      container-name: api-permissions
